--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<section>
+    <form #form="ngForm" (ngSubmit)="onSubmit(form)" 
+          fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3vh">
+        <mat-form-field hintLabel="Please enter your email...">
+            <input 
+                matInput ngModel #email="ngModel"
+                type="email" placeholder="Email..." name="email" required email>
+            <mat-error *ngIf="email.hasError('required')">Field should not be empty!</mat-error>    
+            <mat-error *ngIf="!email.hasError('required')">Please use the correct email format!</mat-error>    
+        </mat-form-field>
+
+        <mat-form-field hintLabel="Please enter your password...">
+            <input 
+                matInput ngModel #password="ngModel"
+                type="password" placeholder="Password..." name="password" required minLength="8">
+                <mat-error *ngIf="password.hasError('required')">Field should not be empty!</mat-error> 
+        </mat-form-field>
+
+        <button type="submit" mat-raised-button color="primary">Log in</button>
+    </form>
+</section>
