--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <section>
-    <form #form="ngForm" (ngSubmit)="onSubmit(form)" 
+    <form #form="ngForm" (ngSubmit)="login(form)" 
           fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3vh">
         <mat-form-field hintLabel="Please enter your email...">
             <input 
