--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,5 +17,7 @@
         </mat-form-field>
 
         <button type="submit" mat-raised-button color="primary">Log in</button>
+
+        <a routerLink="/register">Don't have an account? Click here to register!</a>
     </form>
 </section>
