--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -33,5 +33,7 @@
         </mat-form-field>
 
         <button type="submit" mat-raised-button color="primary">Submit</button>
+
+        <a routerLink="/register">Already have an account? Click here to login!</a>
     </form>
 </section>
