--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,10 +11,22 @@
     </button>
     
     <mat-menu #menu="matMenu" xPosition="before">
-        <button mat-menu-item routerLink="">Home</button>
-        <button mat-menu-item>Orders</button>
-        <button mat-menu-item routerLink="/profile">Profile</button>
-        <button mat-menu-item (click)="this.logout()">Log out</button>
+        <button mat-menu-item routerLink="">
+            <mat-icon>home</mat-icon>
+            Home
+        </button>
+        <button mat-menu-item>
+            <mat-icon>auto_stories</mat-icon>
+            Orders
+        </button>
+        <button mat-menu-item routerLink="/profile">
+            <mat-icon>account_circle</mat-icon>
+            Profile
+        </button>
+        <button mat-menu-item (click)="this.logout()">
+            <mat-icon>logout</mat-icon>
+            Log out
+        </button>
     </mat-menu>
 
 </nav>
