--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,14 +1,21 @@
-form {
-    min-height: 100vh;
-}
 mat-form-field {
-    width: 30%;
+    width: 66%;
 }
 button {
-    width: 10%;
-    margin-left: 20%;
+    width: 8vw;
 }
 a {
     text-decoration: none;
     color: #7f7f7f;
+}
+section {
+    height: 90vh;
+}
+mat-card {
+    width: 50%;
+    margin: auto;
+    text-align: center;
+}
+mat-card-content {
+    width: 75%;
 }
