--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,23 +1,27 @@
-<section>
-    <form #form="ngForm" (ngSubmit)="login(form)" 
-          fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3vh">
-        <mat-form-field hintLabel="Please enter your email...">
-            <input 
-                matInput ngModel #email="ngModel"
-                type="email" placeholder="Email..." name="email" required email>
-            <mat-error *ngIf="email.hasError('required')">Field should not be empty!</mat-error>    
-            <mat-error *ngIf="!email.hasError('required')">Please use the correct email format!</mat-error>    
-        </mat-form-field>
+<section fxLayoutAlign="center center">
+    <mat-card>
+        <form #form="ngForm" (ngSubmit)="login(form)" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3vh">
+            <mat-card-header fxLayoutAlign="center center">
+                <mat-card-title>Login form</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <mat-form-field hintLabel="Please enter your email...">
+                    <input matInput ngModel #email="ngModel" type="email" placeholder="Email..." name="email" required
+                        email>
+                    <mat-error *ngIf="email.hasError('required')">Field should not be empty!</mat-error>
+                    <mat-error *ngIf="!email.hasError('required')">Please use the correct email format!</mat-error>
+                </mat-form-field>
 
-        <mat-form-field hintLabel="Please enter your password...">
-            <input 
-                matInput ngModel #password="ngModel"
-                type="password" placeholder="Password..." name="password" required minLength="8">
-                <mat-error *ngIf="password.hasError('required')">Field should not be empty!</mat-error> 
-        </mat-form-field>
-
-        <button type="submit" mat-raised-button color="primary">Log in</button>
-
+                <mat-form-field hintLabel="Please enter your password...">
+                    <input matInput ngModel #password="ngModel" type="password" placeholder="Password..."
+                        name="password" required minLength="8">
+                    <mat-error *ngIf="password.hasError('required')">Field should not be empty!</mat-error>
+                </mat-form-field>
+            </mat-card-content>
+            <mat-card-actions>
+                <button type="submit" mat-raised-button color="primary">Log in</button>
+            </mat-card-actions>
+        </form>
         <a routerLink="/register">Don't have an account? Click here to register!</a>
-    </form>
+    </mat-card>
 </section>
