--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -1,1 +1,10 @@
-<p>profile works!</p>
+<section fxLayoutAlign="center center">
+  <mat-tab-group color="primary" mat-stretch-tabs>
+    <mat-tab label="Personal information">
+      <personal-information></personal-information>
+    </mat-tab>
+    <mat-tab label="Password">
+      <password></password>
+    </mat-tab>
+  </mat-tab-group>
+</section>
