--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,39 +1,60 @@
-<section>
-    <form #form="ngForm" (ngSubmit)="onSubmit(form)" 
-          fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3vh">
-        <mat-form-field hintLabel="Please, enter your name...">
-            <input 
-                matInput ngModel #name="ngModel"
-                type="text" placeholder="Name..." name="name" required minLength="8">
-            <mat-error *ngIf="name.hasError('required')">Field should not be empty!</mat-error>
-        </mat-form-field>
+<section fxLayoutAlign="center center">
+    <mat-card>
+        <form #form="ngForm" (ngSubmit)="onSubmit(form)" fxLayout="column" fxLayoutAlign="center center"
+            fxLayoutGap="3vh">
+            <mat-card-header fxLayoutAlign="center center">
+                <mat-card-title>Registration form</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <mat-form-field hintLabel="Please, enter your first name...">
+                    <input matInput ngModel #firstName="ngModel" type="text" placeholder="First name..."
+                        name="firstName" required minLength="3">
+                    <mat-error *ngIf="firstName.hasError('required')">Field should not be empty!</mat-error>
+                </mat-form-field>
 
-        <mat-form-field hintLabel="Please enter your email...">
-            <input 
-                matInput ngModel #email="ngModel"
-                type="email" placeholder="Email..." name="email" required email>
-            <mat-error *ngIf="email.hasError('required')">Field should not be empty!</mat-error>    
-            <mat-error *ngIf="!email.hasError('required')">Please use the correct email format!</mat-error>    
-        </mat-form-field>
+                <mat-form-field hintLabel="Please, enter your last name...">
+                    <input matInput ngModel #lastName="ngModel" type="text" placeholder="Last name..." name="lastName"
+                        required minLength="3">
+                    <mat-error *ngIf="lastName.hasError('required')">Field should not be empty!</mat-error>
+                </mat-form-field>
 
-        <mat-form-field hintLabel="Please, enter minimum 8 characters...">
-            <input 
-                matInput ngModel #password="ngModel"
-                type="password" placeholder="Password..." name="password" required minLength="8">
-            <mat-hint align="end">{{ password.value?.length }} / 8</mat-hint>
-            <mat-error *ngIf="password.hasError('required')">Field should not be empty!</mat-error> 
-        </mat-form-field>
+                <mat-form-field hintLabel="Please enter your email...">
+                    <input matInput ngModel #email="ngModel" type="email" placeholder="Email..." name="email" required
+                        email>
+                    <mat-error *ngIf="email.hasError('required')">Field should not be empty!</mat-error>
+                    <mat-error *ngIf="!email.hasError('required')">Please use the correct email format!</mat-error>
+                </mat-form-field>
 
-        <mat-form-field hintLabel="Please, confirm your password...">
-            <input 
-                matInput ngModel #confirmPassword="ngModel"
-                type="password" placeholder="Password..." name="confirmPassword" required minLength="8">
-            <mat-error *ngIf="confirmPassword.hasError('required')">Field should not be empty!</mat-error>
-            <mat-error *ngIf="">Password does not match!</mat-error>
-        </mat-form-field>
+                <mat-form-field hintLabel="Please, enter your phone number...">
+                    <input matInput ngModel #phone="ngModel" type="tel" placeholder="Phone number..." name="phone"
+                        required minLength="8">
+                    <mat-error *ngIf="phone.hasError('required')">Field should not be empty!</mat-error>
+                </mat-form-field>
 
-        <button type="submit" mat-raised-button color="primary">Submit</button>
+                <mat-form-field hintLabel="Please, enter your address...">
+                    <input matInput ngModel #address="ngModel" type="text" placeholder="Address..." name="address"
+                        required minLength="8">
+                    <mat-error *ngIf="address.hasError('required')">Field should not be empty!</mat-error>
+                </mat-form-field>
 
-        <a routerLink="/register">Already have an account? Click here to login!</a>
-    </form>
+                <mat-form-field hintLabel="Please, enter minimum 8 characters...">
+                    <input matInput ngModel #password="ngModel" type="password" placeholder="Password..."
+                        name="password" required minLength="8">
+                    <mat-hint align="end">{{ password.value?.length }} / 8</mat-hint>
+                    <mat-error *ngIf="password.hasError('required')">Field should not be empty!</mat-error>
+                </mat-form-field>
+
+                <mat-form-field hintLabel="Please, confirm your password...">
+                    <input matInput ngModel #confirmPassword="ngModel" type="password" placeholder="Password..."
+                        name="confirmPassword" required minLength="8">
+                    <mat-error *ngIf="confirmPassword.hasError('required')">Field should not be empty!</mat-error>
+                    <mat-error *ngIf="">Password does not match!</mat-error>
+                </mat-form-field>
+            </mat-card-content>
+            <mat-card-actions>
+                <button type="submit" mat-raised-button color="primary">Register</button>
+            </mat-card-actions>
+        </form>
+        <a routerLink="/login">Already have an account? Click here to login!</a>
+    </mat-card>
 </section>
