--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -3,7 +3,7 @@
     <mat-tab label="Personal information">
       <personal-information></personal-information>
     </mat-tab>
-    <mat-tab label="Password">
+    <mat-tab label="Change password">
       <password></password>
     </mat-tab>
   </mat-tab-group>
