Complete edit account and change your password functionalities.

--- a/src/app/auth/profile/password/password.component.html
+++ b/src/app/auth/profile/password/password.component.html
@@ -29,6 +29,7 @@
                     <mat-error *ngIf="confirmPassword.hasError('required')">Field should not be empty!</mat-error>
                     <mat-error *ngIf="">Password does not match!</mat-error>
                 </mat-form-field>
+                <mat-error id="custom-error">{{ error }}</mat-error>
             </mat-card-content>
             <mat-card-actions>
                 <button mat-raised-button color="primary" type="submit">SAVE</button>
