--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             <mat-icon>home</mat-icon>
             Home
         </button>
-        <button mat-menu-item>
+        <button mat-menu-item routerLink="/orders">
             <mat-icon>auto_stories</mat-icon>
             Orders
         </button>
