--- a/src/app/auth/profile/password/password.component.html
+++ b/src/app/auth/profile/password/password.component.html
@@ -32,7 +32,7 @@
                 <mat-error id="custom-error">{{ error }}</mat-error>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-raised-button color="primary" type="submit">SAVE</button>
+                <button [disabled]="!form.valid" mat-raised-button color="primary" type="submit">SAVE</button>
             </mat-card-actions>
         </form>
     </mat-card>
