--- a/src/app/auth/profile/personal-information/personal-information.component.html
+++ b/src/app/auth/profile/personal-information/personal-information.component.html
@@ -45,7 +45,7 @@
 
         <mat-card-actions>
           <button *ngIf="isNotEditable" mat-raised-button color="primary" (click)="changeEditState()">EDIT</button>
-          <button *ngIf="!isNotEditable" mat-raised-button color="primary" type="submit">SAVE</button>
+          <button [disabled]="!form.valid" *ngIf="!isNotEditable" mat-raised-button color="primary" type="submit">SAVE</button>
         </mat-card-actions>
       </mat-card-content>
     </form>
