--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <section fxLayoutAlign="center center">
-    <h1>Welcome to home!</h1>
+    <h1 class="primary-color">Welcome to home!</h1>
 </section>
