--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,3 +1,3 @@
 <section fxLayoutAlign="center center">
-    <h1>Welcome to orders!</h1>
+    <h1 class="primary-color">Welcome to orders!</h1>
 </section>
