--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,3 @@
 <section fxLayoutAlign="center center">
-    <h1>Oops! The link is broken or the page has been moved.</h1>
+    <h1 class="primary-color">Oops! The link is broken or the page has been moved.</h1>
 </section>
