--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -39,7 +39,7 @@
 
                 <mat-form-field hintLabel="Please, enter your favorite categories...">
                     <mat-select [formControl]="categories" multiple placeholder="Favorite categories...">
-                        <mat-option *ngFor="let category of categoryList" [value]="category">{{ category }}</mat-option>
+                        <mat-option *ngFor="let category of categoryList" [value]="category">{{ category.name }}</mat-option>
                     </mat-select>
                 </mat-form-field>
 
