--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,16 @@
-<section fxLayoutAlign="center center">
-    <h1 class="primary-color">Welcome to home!</h1>
+<section fxLayoutAlign="center center" fxLayout="column" fxLayoutGap="3vh">
+    <mat-card *ngFor="let product of products">
+        <mat-card-header fxLayoutAlign="center center">
+            <mat-card-title>{{ product.name }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <img src="https://www.w3schools.com/images/w3schools_green.jpg">
+            <p>Description: {{ product.description | slice:0:200 }}...</p><hr/>
+            <p>Price: {{ product.price }}EUR</p>
+        </mat-card-content>
+        <mat-card-action fxLayoutAlign="space-around center">
+            <a mat-raised-button color="primary" (click)="loadDetails(product.id)">Details</a>
+            <a mat-raised-button color="primary">Add to cart</a>
+        </mat-card-action>
+    </mat-card>
 </section>
