--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,41 @@
 <section fxLayoutAlign="center center" fxLayout="column" fxLayoutGap="3vh">
-    <mat-card *ngFor="let product of products">
+    <mat-card id="filters">
         <mat-card-header fxLayoutAlign="center center">
-            <mat-card-title>{{ product.name }}</mat-card-title>
+            <mat-card-title id="card-title">
+                <mat-label class="primary-color">Filters (by price, by name and description)</mat-label>
+            </mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <img src="https://www.w3schools.com/images/w3schools_green.jpg">
-            <p>Description: {{ product.description | slice:0:200 }}...</p><hr/>
+            <mat-label>Maximum price: </mat-label><br />
+            <mat-slider color="primary" thumbLabel min="0" max="10000" [(ngModel)]="sliderValue" #slider (change)="getByPrice(slider.value)">Max price:</mat-slider>
+            <hr />
+            <mat-form-field>
+                <mat-label>Search for products:</mat-label>
+                <input matInput [(ngModel)]="searchValue" placeholder="Ex. HDD" (keyup)="search($event.target.value)">
+            </mat-form-field>
+        </mat-card-content>
+        <mat-card-action fxLayoutAlign="space-around center">
+        </mat-card-action>
+    </mat-card>
+
+
+
+
+    <mat-card *ngFor="let product of products" class="product">
+        <mat-card-header fxLayoutAlign="center center">
+            <mat-card-title>{{ product.name }}
+                <hr />
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="product-content">
+            <img [src]="product.imageURL">
+            <p>Description: {{ product.description | slice:0:200 }}...</p>
+            <hr />
             <p>Price: {{ product.price }}EUR</p>
         </mat-card-content>
         <mat-card-action fxLayoutAlign="space-around center">
             <a mat-raised-button color="primary" (click)="loadDetails(product.id)">Details</a>
-            <a mat-raised-button color="primary">Add to cart</a>
+            <a mat-raised-button color="primary" (click)="addToCart(product.id)">Add to cart</a>
         </mat-card-action>
     </mat-card>
 </section>
