--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <nav fxLayout="row" fxLayoutAlign="start center" *ngIf="true">
-    <a *ngIf="this.authService.currentUser" id="cart" mat-raised-button color="primary">
-        <mat-icon>shopping_cart</mat-icon>{{ 0 }}
+    <a *ngIf="this.authService.currentUser" id="cart" mat-raised-button color="primary" routerLink="shopping-cart">
+        <mat-icon>shopping_cart</mat-icon>{{ getCount() }}
     </a>
     <button id="explore" *ngIf="!this.authService.currentUser" mat-raised-button routerLink="" color="primary">Shop</button>
     
-    <button *ngIf="!this.authService.currentUser" mat-raised-button routerLink="/login" color="primary">Log in</button>
+    <button *ngIf="!this.authService.currentUser" mat-raised-button routerLink="login" color="primary">Log in</button>
     <button *ngIf="this.authService.currentUser" mat-raised-button [matMenuTriggerFor]="menu" color="primary">
         Hi, {{ this.authService.getCurrentUserDisplayName() }}!
         <mat-icon>expand_more</mat-icon>
