--- a/src/app/shopping-cart/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart/shopping-cart.component.css
@@ -8,6 +8,9 @@ mat-card {
 mat-card-content {
     width: 100%;
 }
-button {
-    min-width: 8vw;
+table {
+    width: 100%;
+}
+#buy {
+    min-width: 10vw;
 }
