--- a/src/app/orders/orders/orders.component.html
+++ b/src/app/orders/orders/orders.component.html
@@ -2,45 +2,38 @@
     <mat-card>
         <mat-card-header fxLayoutAlign="center center">
             <mat-card-title>
-                <mat-icon>shopping_cart</mat-icon>
-                Shopping cart
-                <mat-icon>shopping_cart</mat-icon>
+                Orders
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
             
-            <table mat-table [dataSource]="shoppingCart.products">
+            <table mat-table [dataSource]="orders">
                 <ng-container matColumnDef="number">
                   <th mat-header-cell *matHeaderCellDef> No. </th>
                   <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
-                  <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
               
-                <ng-container matColumnDef="name">
-                  <th mat-header-cell *matHeaderCellDef> Name </th>
-                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-                  <td mat-footer-cell *matFooterCellDef></td>
+                <ng-container matColumnDef="amount">
+                  <th mat-header-cell *matHeaderCellDef> Amount </th>
+                  <td mat-cell *matCellDef="let element"> {{element.amount}}EUR </td>
                 </ng-container>
               
-                <ng-container matColumnDef="price">
-                  <th mat-header-cell *matHeaderCellDef> Price </th>
-                  <td mat-cell *matCellDef="let element"> {{element.price}}EUR </td>
-                  <td mat-footer-cell *matFooterCellDef>Amount: {{ shoppingCart.amount }}EUR</td>
+                <ng-container matColumnDef="count">
+                  <th mat-header-cell *matHeaderCellDef> Number of products </th>
+                  <td mat-cell *matCellDef="let element"> {{element.count}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="remove">
                     <th mat-header-cell *matHeaderCellDef> Remove </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="primary" (click)="removeProduct(element.id)">
+                        <button mat-raised-button color="primary" (click)="deleteById(element.id)">
                             <mat-icon>delete</mat-icon>
                         </button>
                     </td>
-                    <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
               
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
               </table>
         </mat-card-content>
         <mat-card-actions fxLayoutAlign="space-evenly center">
@@ -48,7 +41,6 @@
                 <mat-icon>arrow_back_ios</mat-icon>
                 Continue shopping
             </button>
-            <button [disabled]="shoppingCart.count==0" mat-raised-button color="primary" (click)="buy()" id="buy">Buy</button>
         </mat-card-actions>
     </mat-card>
 </section>
