--- a/src/app/orders/orders/orders.component.html
+++ b/src/app/orders/orders/orders.component.html
@@ -1,9 +1,7 @@
 <section fxLayoutAlign="center center" fxLayout="column">
     <mat-card>
         <mat-card-header fxLayoutAlign="center center">
-            <mat-card-title>
-                Orders
-            </mat-card-title>
+            <mat-card-title>Orders</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             
