--- a/src/app/orders/orders/orders.component.html
+++ b/src/app/orders/orders/orders.component.html
@@ -5,19 +5,19 @@
         </mat-card-header>
         <mat-card-content>
             
-            <table mat-table [dataSource]="orders">
+            <table mat-table [dataSource]="orders" matSort>
                 <ng-container matColumnDef="number">
                   <th mat-header-cell *matHeaderCellDef> No. </th>
                   <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
                 </ng-container>
               
                 <ng-container matColumnDef="amount">
-                  <th mat-header-cell *matHeaderCellDef> Amount </th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Amount </th>
                   <td mat-cell *matCellDef="let element"> {{element.amount}}EUR </td>
                 </ng-container>
               
                 <ng-container matColumnDef="count">
-                  <th mat-header-cell *matHeaderCellDef> Number of products </th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Number of products </th>
                   <td mat-cell *matCellDef="let element"> {{element.count}} </td>
                 </ng-container>
 
@@ -33,6 +33,7 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
               </table>
+              <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </mat-card-content>
         <mat-card-actions fxLayoutAlign="space-evenly center">
             <button mat-raised-button color="primary" routerLink="">
