--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<section fxLayoutAlign="center center" fxLayout="column" fxLayoutGap="3vh">
+<section fxLayoutAlign="center center" fxLayout="column">
     <mat-card id="filters">
         <mat-card-header fxLayoutAlign="center center">
             <mat-card-title id="card-title">
@@ -14,28 +14,27 @@
                 <input matInput [(ngModel)]="searchValue" placeholder="Ex. HDD" (keyup)="search($event.target.value)">
             </mat-form-field>
         </mat-card-content>
-        <mat-card-action fxLayoutAlign="space-around center">
-        </mat-card-action>
     </mat-card>
 
-
-
-
-    <mat-card *ngFor="let product of products" class="product">
-        <mat-card-header fxLayoutAlign="center center">
-            <mat-card-title>{{ product.name }}
-                <hr />
-            </mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="product-content">
-            <img [src]="product.imageURL">
-            <p>Description: {{ product.description | slice:0:200 }}...</p>
-            <hr />
-            <p>Price: {{ product.price }}EUR</p>
-        </mat-card-content>
-        <mat-card-action fxLayoutAlign="space-around center">
-            <a mat-raised-button color="primary" (click)="loadDetails(product.id)">Details</a>
-            <a mat-raised-button color="primary" (click)="addToCart(product.id)">Add to cart</a>
-        </mat-card-action>
-    </mat-card>
+    <mat-grid-list cols="3" rowHeight="1:1" gutterSize="10vh" id="grid">
+        <mat-grid-tile *ngFor="let product of products">
+            <mat-card fxLayout="column">
+                <mat-card-header fxLayoutAlign="center center">
+                    <mat-card-title>{{ product.name }}
+                        <hr />
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="product-content">
+                    <img [src]="product.imageURL">
+                    <p>Description: {{ product.description | slice:0:200 }}...</p>
+                    <hr />
+                    <p>Price: {{ product.price }}EUR</p>
+                </mat-card-content>
+                <mat-card-action fxLayoutAlign="space-evenly center">
+                    <a mat-raised-button color="primary" (click)="loadDetails(product.id)">Details</a>
+                    <a mat-raised-button color="primary" (click)="addToCart(product.id)">Add to cart</a>
+                </mat-card-action>
+            </mat-card>
+        </mat-grid-tile>
+    </mat-grid-list>
 </section>
