--- a/src/app/shopping-cart/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart/shopping-cart.component.html
@@ -9,7 +9,7 @@
         </mat-card-header>
         <mat-card-content>
             
-            <table mat-table [dataSource]="shoppingCart.products">
+            <table mat-table [dataSource]="shoppingCart?.products">
                 <ng-container matColumnDef="number">
                   <th mat-header-cell *matHeaderCellDef> No. </th>
                   <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
@@ -25,7 +25,7 @@
                 <ng-container matColumnDef="price">
                   <th mat-header-cell *matHeaderCellDef> Price </th>
                   <td mat-cell *matCellDef="let element"> {{element.price}}EUR </td>
-                  <td mat-footer-cell *matFooterCellDef>Amount: {{ shoppingCart.amount }}EUR</td>
+                  <td mat-footer-cell *matFooterCellDef>Amount: {{ shoppingCart?.amount }}EUR</td>
                 </ng-container>
 
                 <ng-container matColumnDef="remove">
@@ -48,7 +48,7 @@
                 <mat-icon>arrow_back_ios</mat-icon>
                 Continue shopping
             </button>
-            <button [disabled]="shoppingCart.count==0" mat-raised-button color="primary" (click)="buy()" id="buy">Buy</button>
+            <button [disabled]="shoppingCart?.count==0" mat-raised-button color="primary" (click)="buy()" id="buy">Buy</button>
         </mat-card-actions>
     </mat-card>
 </section>
