--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/theming';
+@import '~ngx-bar-rating/themes/br-default-theme';
 
 @include mat-core();
 $app-primary: mat-palette($mat-deep-purple);
