--- a/src/app/shopping-cart/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart/shopping-cart.component.html
@@ -28,6 +28,32 @@
                   <td mat-footer-cell *matFooterCellDef>Amount: {{ shoppingCart?.amount }}EUR</td>
                 </ng-container>
 
+                <ng-container matColumnDef="decrease">
+                    <th mat-header-cell *matHeaderCellDef> Decrease </th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-raised-button color="primary" (click)="decreaseProduct(element.id)">
+                            <mat-icon>remove</mat-icon>
+                        </button>
+                    </td>
+                    <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="quantity">
+                    <th mat-header-cell *matHeaderCellDef> Quantity </th>
+                    <td mat-cell *matCellDef="let element">3</td>
+                    <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="increase">
+                    <th mat-header-cell *matHeaderCellDef> Increase </th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-raised-button color="primary" (click)="increaseProduct(element.id)">
+                            <mat-icon>add</mat-icon>
+                        </button>
+                    </td>
+                    <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
                 <ng-container matColumnDef="remove">
                     <th mat-header-cell *matHeaderCellDef> Remove </th>
                     <td mat-cell *matCellDef="let element">
