--- a/src/app/product/product-details/product-details.component.css
+++ b/src/app/product/product-details/product-details.component.css
@@ -5,7 +5,7 @@
     margin-left: 2.5vw;
 }
 mat-card {
-    width: 50%;
+    width: 60%;
     margin: auto;
 }
 mat-card-content {
@@ -34,4 +34,10 @@ p {
 }
 #row {
     width: 100%;
+}
+mat-expansion-panel, table  {
+    width: 100%;
+}
+#reviews {
+    width: 80%;
 }
