--- a/src/app/product/product-details/product-details.component.html
+++ b/src/app/product/product-details/product-details.component.html
@@ -30,7 +30,7 @@
                 </div>
                 <div>
                     <h4 class="label">COUNTRY OF ORIGIN</h4>
-                    <p>{{ product?.countryOfOrigin }}</p>
+                    <p>{{ product?.countryOfOrigin.name }}</p>
                 </div>
                 <div>
                     <h4 class="label">SUBCATEGORY</h4>
