--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,61 +24,72 @@
                         </mat-card>
                     </mat-tab>
                     <mat-tab label="Apply filters">
-                        <mat-card class="filters">
-                            <mat-card-header fxLayoutAlign="center center">
-                                <mat-card-title id="card-title">
-                                    <mat-label class="primary-color">Filters</mat-label>
-                                </mat-card-title>
-                            </mat-card-header>
-                            <mat-card-content>
-                                <section fxLayoutAlign="center center">
-                                    <mat-tab-group color="primary" mat-stretch-tabs>
-                                        <mat-tab label="By categories">
-                                            <mat-form-field>
-                                                <mat-select [formControl]="categories" multiple placeholder="Select categories...">
-                                                    <mat-option *ngFor="let category of categoryList" [value]="category">{{
-                                                        category.name }}</mat-option>
-                                                </mat-select>
-                                            </mat-form-field>
-                                        </mat-tab>
-                                        <mat-tab label="By subcategories">
-                                            <mat-form-field>
-                                                <mat-select [formControl]="categories" multiple
-                                                    placeholder="Select subcategories...">
-                                                    <mat-option *ngFor="let category of categoryList" [value]="category">{{
-                                                        category.name }}</mat-option>
-                                                </mat-select>
-                                            </mat-form-field>
-                                        </mat-tab>
-                                    </mat-tab-group>
-                                </section>
-                                <hr />
-                                <mat-form-field>
-                                    <mat-select [formControl]="categories" multiple placeholder="Select countries...">
-                                        <mat-option *ngFor="let category of categoryList" [value]="category">{{ category.name }}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                                <hr />
-                                <div fxLayoutAlign="center center" fxLayout="column">
-                                    <mat-label>Maximum price: </mat-label>
-                                    <mat-slider color="primary" thumbLabel min="0" max="10000" [(ngModel)]="sliderValue" #slider
-                                        (change)="getByPrice(slider.value)">Max price:
-                                    </mat-slider>
-                                </div>
-                                <hr />
-                                <div fxLayoutAlign="center center" fxLayout="column">
-                                    <mat-label>Minimum rating: </mat-label>
-                                    <bar-rating [(ngModel)]="rating" [max]="5" [theme]="'default'" (rateChange)="change()">
-                                    </bar-rating>
-                                </div>
-                            </mat-card-content>
-                        </mat-card>
+                        <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+                            <mat-card class="filters">
+                                <mat-card-header fxLayoutAlign="center center">
+                                    <mat-card-title id="card-title">
+                                        <mat-label class="primary-color">Filters</mat-label>
+                                    </mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>
+                                    <section fxLayoutAlign="center center">
+                                        <mat-tab-group color="primary" mat-stretch-tabs>
+                                            <mat-tab label="By categories">
+                                                <mat-form-field>
+                                                    <mat-select [formControl]="categories" multiple
+                                                        placeholder="Select categories..." (selectionChange)="categorySelected()">
+                                                        <mat-option *ngFor="let category of categoryList"
+                                                            [value]="category">{{
+                                                            category.name }}</mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </mat-tab>
+                                            <mat-tab label="By subcategories">
+                                                <mat-form-field>
+                                                    <mat-select [formControl]="subcategories" multiple
+                                                        placeholder="Select subcategories..." (selectionChange)="subcategorySelected()">
+                                                        <mat-option *ngFor="let subcategory of subcategoryList"
+                                                            [value]="subcategory">
+                                                            {{subcategory.name }}</mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </mat-tab>
+                                        </mat-tab-group>
+                                    </section>
+                                    <hr />
+                                    <mat-form-field>
+                                        <mat-select [formControl]="countries" multiple
+                                            placeholder="Select countries...">
+                                            <mat-option *ngFor="let country of countryList" [value]="country">
+                                                {{country.name }}
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                    <hr />
+                                    <div fxLayoutAlign="center center" fxLayout="column">
+                                        <mat-label>Maximum price: </mat-label>
+                                        <mat-slider [formControl]="slider" color="primary" thumbLabel min="0" max="10000">
+                                            Max price:
+                                        </mat-slider>
+                                    </div>
+                                    <hr />
+                                    <div fxLayoutAlign="center center" fxLayout="column">
+                                        <mat-label>Minimum rating: </mat-label>
+                                        <bar-rating [formControl]="rating" [max]="5" [theme]="'default'"></bar-rating>
+                                    </div>
+                                    <hr />
+                                    <div fxLayoutAlign="center center" fxLayout="column" id="apply-container">
+                                        <button id="apply-button" type="submit" mat-raised-button
+                                            color="primary">Apply</button>
+                                    </div>
+                                </mat-card-content>
+                            </mat-card>
+                        </form>
                     </mat-tab>
                 </mat-tab-group>
             </section>
 
-            
+
         </mat-sidenav>
 
         <mat-sidenav-content>
